blogr-landing-page-main/styles.css
@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");

:root {
  --nav-bar-white: rgba(100%, 100%, 100%, 80%);
  --background-red: hsl(356, 100%, 66%);
  --hover-red: hsl(355, 100%, 74%);
  --header-blue: hsl(208, 49%, 24%);
  --paragraph-gray: hsl(207, 13%, 34%);
}

/* General rules */

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Overpass", Tahoma, Geneva, Verdana, sans-serif;
}

ul {
  list-style: none;
}

/* Used to align all text content (and buttons) on the page */
.default-margins {
  width: 90%;
  max-width: 1024px;
  margin: auto;
}

/* General classes */

.text-button {
  background: none;
  color: var(--nav-bar-white);
  outline: none;
  border: none;
}

.rounded-white-button {
  background-color: rgba(100%, 100%, 100%, 100%);
  color: var(--background-red);
  border-radius: 30px;
  outline: none;
  border: none;
}

.rounded-white-button:hover {
  background-color: var(--hover-red);
  color: var(--nav-bar-white);
}

.text-button:hover {
  text-decoration: underline;
}

/* Page element styles */

.header {
  background-color: var(--background-red);
  background-image: linear-gradient(
      to right,
      rgba(255, 143, 112, 0.7),
      rgba(255, 61, 84, 0.3)
    ),
    url("images/bg-pattern-intro.svg");
  background-size: auto;
  background-position: center;
  border-bottom-left-radius: 75px;
}

/* Navbar */

nav {
  display: flex;
  position: relative;
  align-items: center;
  padding: 5vh 0;
}

nav ul li button {
  font-family: "Ubuntu", Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 600;
  cursor: pointer;
}

ul.main-menu {
  display: flex;
  margin-left: 1vw;
}

ul.main-menu button {
  margin-left: 2vw;
}

.dropdown-menu {
  display: none;
}

ul.login-buttons {
  display: flex;
  position: absolute;
  right: 0;
  align-items: center;
}

ul.login-buttons button {
  margin-left: 1vw;
  text-align: center;
  border: none;
  display: inline-block;
}

ul.login-buttons button.sign-up-button {
  padding: 10px 23px;
}

.header-section {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  justify-content: center;
  margin-top: 9vh;
  padding-bottom: 10vh;
}

h1 {
  font-size: 1rem;
  font-weight: 300;
  margin-bottom: 3vh;
  color: white;
}

h1 strong {
  font-size: 3rem;
  font-weight: 600;
  display: block;
  margin-bottom: 1vh;
}

.header-buttons {
  padding: 10px 15px;
}

button.start-button {
  margin-right: 0.5vw;
  font-weight: 600;
  padding: inherit;
}

button.learn-button {
  background: none;
  color: white;
  border-radius: 30px;
  outline: none;
  border: 1px solid;
  padding: inherit;
}

button.learn-button {
  margin-left: 0.5vw;
}

h2.dark-header {
  margin-top: 15vh;
  text-align: center;
  font-size: 2rem;
  color: var(--header-blue);
}

div.content-row {
  display: flex;
  flex-direction: row;
  margin-top: 9vh;
}

div.content-row h3 {
  color: var(--header-blue);
  font-size: 1.5rem;
  margin-bottom: 2vh;
  position: relative;
}

div.content-row p {
  color: var(--header-blue);
  margin-bottom: 8vh;
  color: var(--paragraph-gray);
  width: 30vw;
}

div.content-row #editor-image {
  position: absolute;
  top: 64%;
  left: 53%;
  width: 721px;
}

#phone-image {
  padding: 0;
}

.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

